--- a/0_REPORT/Template2/TitlePage.tex
+++ b/0_REPORT/Template2/TitlePage.tex
@@ -28,7 +28,7 @@
     \\ [0.75cm]
     {\large By Ismael Tobias Frei}
     \\ [1cm]
-    \includegraphics[width=0.8\linewidth]{images/Adafruit_Front.jpg}
+    \includegraphics[width=0.8\linewidth]{images/FPGA_ESL_LOGO.jpg}
     \\[1cm]
     
     \begin{multicols}{2}
