--- a/0_REPORT/Template2/references.bib
+++ b/0_REPORT/Template2/references.bib
@@ -1,44 +1,50 @@
 @online{adafruitwebsite,
-    title         = {Adafruit},
+    title         = {Adafruit TFT Display Bonnet},
     year          = {2024},
     url           = {https://learn.adafruit.com/adafruit-1-3-color-tft-bonnet-for-raspberry-pi}
 }
 
-@online{gitwebsite,
-    title         = {ESLgit},
-    year          = {2023},
-    url           = {https://eslgit.epfl.ch}
+@online{xHeepRepo,
+    title         = {X-Heep Repository on Github},
+    year          = {2024},
+    url           = {https://github.com/esl-epfl/x-heep}
 }
 
-@article{datastruct,
-    author        = {Arthur Dietrich},
-    title         = {Android Integration of unobstrusive EEG monitoring devices},
-    year          = {2022},
-    pages         = {11-12},
-}
 
-@online{freertos,
-    title         = {freertos},
-    year          = {2023},
-    url           = {https://www.freertos.org/features.html}
+@online{arduinoST7789,
+    title         = {Arduino ST7789 Fast Library},
+    year          = {2024},
+    url           = {https://github.com/cbm80amiga/Arduino_ST7789_Fast/tree/b2782a381d61511b87df6cd6b20b71276d072a6d}
 }
 
 
 
-@online{lightblue,
-    title         = {LightBlue App},
-    year          = {2023},
-    url           = {https://apps.apple.com/ch/app/lightblue/id557428110}
+@online{heepocratesWebsite,
+    title         = {HEEPocrates EPFL research},
+    year          = {2024},
+    url           = {https://www.epfl.ch/labs/esl/research/systems-on-chip/heepocrates/}
 }
 
-@online{nucleo,
-    title         = {STM32L476 Nucleo-64},
-    year          = {2023},
-    url           = {https://www.st.com/en/evaluation-tools/nucleo-l476rg.html}
+@online{xHeepWebsite,
+    title         = {X-HEEP Homepage},
+    year          = {2024},
+    url           = {https://x-heep.epfl.ch/}
 }
 
-@online{blemod,
-    title         = {X-NUCLEO-BNRG2A1},
-    year          = {2023},
-    url           = {https://www.st.com/en/ecosystems/x-nucleo-bnrg2a1.html}
+@online{nordicDOOM,
+    title         = {nrf-doom Github Repository},
+    year          = {2024},
+    url           = {https://github.com/NordicPlayground/nrf-doom}
+}
+
+@online{embeddedDOOM,
+    title         = {embeddedDOOM Github Repository},
+    year          = {2024},
+    url           = {https://github.com/cnlohr/embeddedDOOM}
+}
+
+@online{doomSystemRequirements,
+    title         = {System Requirements for the original DOOM},
+    year          = {2024},
+    url           = {https://gamesystemrequirements.com/game/doom}
 }
