--- a/0_REPORT/Template2/TitlePage.tex
+++ b/0_REPORT/Template2/TitlePage.tex
@@ -35,11 +35,11 @@
     
     \flushleft
     
-    \textsc{Thesis Advisor:}
+    \textsc{Project Advisor:}
     \\
     Prof. David Atienza
     \\ [0.25cm]
-    \textsc{Thesis Supervisors:}
+    \textsc{Project Supervisors:}
     \\
     Dr. Jose Miranda and Dr. Miguel Peon Quiros
     
