--- a/0_REPORT/Template2/references.bib
+++ b/0_REPORT/Template2/references.bib
@@ -1,19 +1,25 @@
+@online{projectRepo,
+    title         = {Github Repository of the project},
+    year          = {June 20th, 2024},
+    url           = {https://github.com/isidebisi/x-heep}
+}
+
 @online{adafruitwebsite,
     title         = {Adafruit TFT Display Bonnet},
-    year          = {2024},
+    year          = {June 20th, 2024},
     url           = {https://learn.adafruit.com/adafruit-1-3-color-tft-bonnet-for-raspberry-pi}
 }
 
 @online{xHeepRepo,
     title         = {X-Heep Repository on Github},
-    year          = {2024},
+    year          = {June 20th, 2024},
     url           = {https://github.com/esl-epfl/x-heep}
 }
 
 
 @online{arduinoST7789,
     title         = {Arduino ST7789 Fast Library},
-    year          = {2024},
+    year          = {June 20th, 2024},
     url           = {https://github.com/cbm80amiga/Arduino_ST7789_Fast/tree/b2782a381d61511b87df6cd6b20b71276d072a6d}
 }
 
@@ -21,30 +27,48 @@
 
 @online{heepocratesWebsite,
     title         = {HEEPocrates EPFL research},
-    year          = {2024},
+    year          = {June 20th, 2024},
     url           = {https://www.epfl.ch/labs/esl/research/systems-on-chip/heepocrates/}
 }
 
 @online{xHeepWebsite,
     title         = {X-HEEP Homepage},
-    year          = {2024},
+    year          = {June 20th, 2024},
     url           = {https://x-heep.epfl.ch/}
 }
 
 @online{nordicDOOM,
     title         = {nrf-doom Github Repository},
-    year          = {2024},
+    year          = {June 20th, 2024},
     url           = {https://github.com/NordicPlayground/nrf-doom}
 }
 
 @online{embeddedDOOM,
     title         = {embeddedDOOM Github Repository},
-    year          = {2024},
+    year          = {June 20th, 2024},
     url           = {https://github.com/cnlohr/embeddedDOOM}
 }
 
 @online{doomSystemRequirements,
     title         = {System Requirements for the original DOOM},
-    year          = {2024},
+    year          = {June 20th, 2024},
     url           = {https://gamesystemrequirements.com/game/doom}
+}
+
+@online{redditDOOMCommunity,
+    title         = {Reddit R/itrunsdoom Community},
+    year          = {June 20th, 2024},
+    url           = {https://www.reddit.com/r/itrunsdoom/}
+}
+
+@online{canItRunDOOM,
+    title         = {Homepage of Can It Run DOOM ?},
+    year          = {June 20th, 2024},
+    url           = {https://canitrundoom.org/}
+}
+
+@online{pynqPinout,
+    title         = {PYNQ-Z2 Pinout Diagram},
+    year          = {June 20th, 2024},
+    url           = {https://discuss.pynq.io/t/pynq-z2-pinout/4256}
 }
